Fix Java 16 compatibility on Bukkit/Sponge 1.8 (#2438)